# nudge

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  STABILITY_NOTES.md  autoresearch-results.md  autoresearch-results.tsv  autoresearch_quickhull.tsv  coverage.xml  err3.txt  err5.txt  err6.txt  err7.txt  err8.txt  err9.txt  err_ico.txt  err_orphan.txt  nudge.h  out3.txt  run_coverage.bat  soak_output.txt  visual.cmd
.claude/commands/: physics-debug.md  remote-debug.md
.claude/skills/physics-debug/: SKILL.md  cdb-findings.md
.claude/skills/remote-debug/: SKILL.md
.github/workflows/: ci.yml  pages.yml
coverage/: index.html
coverage/Modules/: nudge_tests.html
coverage/Modules/nudge_tests/: bvh.c.html
docs/: epa-comparison.md
libraries/imgui/: dcimgui.cpp  dcimgui.h
src/: broadphase.c  bvh.c  ckit.h  collision.c  contacts.c  debug_server.c  debug_ui.c  deflate.c  epa.c  gjk.c  gjk_batch.c  gjk_bench.c  gjk_gino.c  heightfield.c  inertia.c  islands.c  joints.c  main.c  np_viz.c  nudge.c  nudge.h  nudge_amalg.c  nudge_internal.h  perf.h  pre_solve_manifold.inc  quickhull.c  render.c  rewind.c  scenes.c  sensor.c  serialize.c  simd.h  snapshot.c  soft_body.c  solver.c  solver_avbd.c  solver_cr.c  solver_ldl.c  solver_pgs.c  solver_pgs_simd.c  (+31 more)
testbed/: .gitignore  Testbed.sln  UpgradeLog.htm
testbed/Backup/: Testbed.sln
testbed/native/: CMakeLists.txt  jolt_dll.cpp  nudge_dll.c
testbed/src/Testbed/: Program.cs  Scenarios.cs  Testbed.csproj
testbed/src/Testbed.Bepu/: Class1.cs  Testbed.Bepu.csproj
testbed/src/Testbed.Common/: Class1.cs
testbed/src/Testbed.Jolt/: Class1.cs
testbed/src/Testbed.Nudge/: Class1.cs  Testbed.Nudge.csproj
testbed/src/Testbed.Visual/: Program.cs  Testbed.Visual.csproj  VisualScenes.cs
tools/: amalgamate.c  viewer.c
tools/repros/: capsule_bounce.txt  capsule_isolate.txt
web/: shell.html
